--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
     &#127759;
     &#127808;
+    &#128514;
     <!-- <script src="./js/01-foreach.js" type="module"></script> -->
     <!-- <script src="./js/02-map.js" type="module"></script> -->
     <!-- <script src="./js/03-filter.js" type="module"></script> -->
     <!-- <script src="./js/04-find.js" type="module"></script> -->
     <!-- <script src="./js/05-every-some.js" type="module"></script> -->
-    <script src="./js/06-reduce.js" type="module"></script>
-    <!-- <script src="./js/07-sort.js" type="module"></script> -->
+    <!-- <script src="./js/06-reduce.js" type="module"></script> -->
+    <script src="./js/07-sort.js" type="module"></script>
 
 </body>
 
